# MAS3114_MatLab

./: CMakeLists.txt  README.md
Assignment 0/: Assignment0_Output.mlx  Assignment0_Output_Octave.m  Exercise.m  rank_comp.m
Assignment 0/__MACOSX/: ._Assignment0_Output_Octave.m  ._Exercise.m
Assignment 1/: Assignment1_Output.mlx  Assignment1_Output_Octave.m  Exercise1.m  Exercise2.m  Exercise3.m  LS_solution.m
Assignment 1/__MACOSX/: ._Exercise1.m  ._Exercise2.m
Assignment 2/: Assignment2_Output.mlx  Assignment2_Output_Octave.m  Exercise1.m  Exercise2.m  Exercise3.m  ExtraCredit.m  transformation.m
Assignment 3/: Assignment3_Output.mlx  Assignment3_Output_Octave.mlx  CramersRule.m  CramersRule3x3.m  Exercise1.m  Exercise2.m  Exercise3.m  ParticularSolution.m
Assignment 4/: Assignment4_Output.mlx  Assignment4_Output_Octave.m  Exercise1.m  Exercise2.m  Exercise3.m  SolveDiffEq.m  eigvec.m  proj.m  randiFullRank.m
Assignment 4/__MACOSX/: ._Exercise1.m  ._eigvec.m
Extra Credit/: gram_schmidt.m
